ros2_ws/log/build_2025-04-20_13-36-29/catRobot/stderr.log
  File "/home/cat/robot/cat-stalker/ros2_ws/install/catRobot/lib/python3.12/site-packages/catRobot/lidarListener.py", line 85
    d++
       ^
SyntaxError: invalid syntax

